add: complete addtion of 90 questions

--- a/Easy/(1-15).md
+++ b/Easy/(1-15).md
@@ -1,5 +1,5 @@
 
-## 1️⃣ List all customers with their first name, last name, and email
+## 1. List all customers with their first name, last name, and email
 
 ```sql
 SELECT first_name, last_name, email 
@@ -8,7 +8,7 @@ FROM Customers;
 
 ---
 
-## 2️⃣ Find all products with price less than $50
+## 2. Find all products with price less than $50
 
 ```sql
 SELECT product_name, price 
@@ -18,7 +18,7 @@ WHERE price < 50;
 
 ---
 
-## 3️⃣ Show all orders that are in 'Delivered' status
+## 3. Show all orders that are in 'Delivered' status
 
 ```sql
 SELECT order_id, order_date, total_amount 
@@ -28,7 +28,7 @@ WHERE status = 'Delivered';
 
 ---
 
-## 4️⃣ Display customer names and their phone numbers for customers who joined in January 2024
+## 4. Display customer names and their phone numbers for customers who joined in January 2024
 
 ```sql
 SELECT first_name, last_name, phone 
@@ -38,7 +38,7 @@ WHERE created_at BETWEEN '2024-01-01' AND '2024-01-31';
 
 ---
 
-## 5️⃣ List all categories in alphabetical order
+## 5. List all categories in alphabetical order
 
 ```sql
 SELECT category_name 
@@ -48,7 +48,7 @@ ORDER BY category_name;
 
 ---
 
-## 6️⃣ Find products with stock less than 30 units
+## 6. Find products with stock less than 30 units
 
 ```sql
 SELECT product_name, stock 
@@ -58,7 +58,7 @@ WHERE stock < 30;
 
 ---
 
-## 7️⃣ Show orders placed between January 15, 2024 and February 15, 2024
+## 7. Show orders placed between January 15, 2024 and February 15, 2024
 
 ```sql
 SELECT order_id, order_date, total_amount 
@@ -68,7 +68,7 @@ WHERE order_date BETWEEN '2024-01-15' AND '2024-02-15';
 
 ---
 
-## 8️⃣ Display distinct cities where customers live
+## 8. Display distinct cities where customers live
 
 ```sql
 SELECT DISTINCT city 
@@ -78,7 +78,7 @@ ORDER BY city;
 
 ---
 
-## 9️⃣ Find customers whose last name starts with 'M'
+## 9. Find customers whose last name starts with 'M'
 
 ```sql
 SELECT first_name, last_name, email 
@@ -88,7 +88,7 @@ WHERE last_name LIKE 'M%';
 
 ---
 
-## 🔟 List products with price between $50 and $200
+## 10. List products with price between $50 and $200
 
 ```sql
 SELECT product_name, price 
@@ -98,7 +98,7 @@ WHERE price BETWEEN 50 AND 200;
 
 ---
 
-## 1️⃣1️⃣ Show the 5 most expensive products
+## 11. Show the 5 most expensive products
 
 ```sql
 SELECT product_name, price 
@@ -109,7 +109,7 @@ LIMIT 5;
 
 ---
 
-## 1️⃣2️⃣ Count total number of customers
+## 12. Count total number of customers
 
 ```sql
 SELECT COUNT(*) AS total_customers 
@@ -118,7 +118,7 @@ FROM Customers;
 
 ---
 
-## 1️⃣3️⃣ Find the average price of all products
+## 13. Find the average price of all products
 
 ```sql
 SELECT ROUND(AVG(price), 2) AS average_price 
@@ -127,7 +127,7 @@ FROM Products;
 
 ---
 
-## 1️⃣4️⃣ Display orders that are not yet shipped (Pending or Processing)
+## 14. Display orders that are not yet shipped (Pending or Processing)
 
 ```sql
 SELECT order_id, status, order_date 
@@ -137,7 +137,7 @@ WHERE status IN ('Pending', 'Processing');
 
 ---
 
-## 1️⃣5️⃣ List customers who don't have a phone number recorded
+## 15. List customers who don't have a phone number recorded
 
 ```sql
 SELECT first_name, last_name, email 
