--- a/Easy/(16-30).md
+++ b/Easy/(16-30).md
@@ -1,4 +1,4 @@
-## 1️⃣6️⃣ Count number of orders per status
+## 16. Count number of orders per status
 
 ```sql
 SELECT status, COUNT(*) AS order_count 
@@ -8,7 +8,7 @@ GROUP BY status;
 
 ---
 
-## 1️⃣7️⃣ Calculate total revenue from all delivered orders
+## 17. Calculate total revenue from all delivered orders
 
 ```sql
 SELECT SUM(total_amount) AS total_revenue 
@@ -18,7 +18,7 @@ WHERE status = 'Delivered';
 
 ---
 
-## 1️⃣8️⃣ Find the average order value
+## 18. Find the average order value
 
 ```sql
 SELECT ROUND(AVG(total_amount), 2) AS avg_order_value 
@@ -27,7 +27,7 @@ FROM Orders;
 
 ---
 
-## 1️⃣9️⃣ Count products in each category
+## 19. Count products in each category
 
 ```sql
 SELECT c.category_name, COUNT(p.product_id) AS product_count
@@ -39,7 +39,7 @@ ORDER BY product_count DESC;
 
 ---
 
-## 2️⃣0️⃣ Find the minimum and maximum product price in each category
+## 20. Find the minimum and maximum product price in each category
 
 ```sql
 SELECT c.category_name, 
@@ -53,7 +53,7 @@ ORDER BY c.category_name;
 
 ---
 
-## 2️⃣1️⃣ Calculate total quantity sold for each product
+## 21. Calculate total quantity sold for each product
 
 ```sql
 SELECT p.product_name, SUM(oi.quantity) AS total_quantity_sold
@@ -65,7 +65,7 @@ ORDER BY total_quantity_sold DESC;
 
 ---
 
-## 2️⃣2️⃣ Count number of customers who joined each month
+## 22. Count number of customers who joined each month
 
 ```sql
 SELECT DATE_FORMAT(created_at, '%Y-%m') AS join_month, 
@@ -77,7 +77,7 @@ ORDER BY join_month;
 
 ---
 
-## 2️⃣3️⃣ Find total sales per payment method
+## 23. Find total sales per payment method
 
 ```sql
 SELECT payment_method, SUM(amount) AS total_sales
@@ -89,7 +89,7 @@ ORDER BY total_sales DESC;
 
 ---
 
-## 2️⃣4️⃣ Determine average product price by category
+## 24. Determine average product price by category
 
 ```sql
 SELECT c.category_name, ROUND(AVG(p.price), 2) AS avg_price
@@ -101,7 +101,7 @@ ORDER BY avg_price DESC;
 
 ---
 
-## 2️⃣5️⃣ Count orders per customer and show only those with more than 1 order
+## 25. Count orders per customer and show only those with more than 1 order
 
 ```sql
 SELECT c.customer_id, c.first_name, c.last_name, COUNT(o.order_id) AS order_count
@@ -114,7 +114,7 @@ ORDER BY order_count DESC;
 
 ---
 
-## 2️⃣6️⃣ Calculate total revenue per month
+## 26. Calculate total revenue per month
 
 ```sql
 SELECT DATE_FORMAT(order_date, '%Y-%m') AS month, 
@@ -127,7 +127,7 @@ ORDER BY month;
 
 ---
 
-## 2️⃣7️⃣ Find the most popular shipping city (based on order count)
+## 27. Find the most popular shipping city (based on order count)
 
 ```sql
 SELECT a.city, COUNT(o.order_id) AS order_count
@@ -140,7 +140,7 @@ LIMIT 5;
 
 ---
 
-## 2️⃣8️⃣ Show categories that have more than 3 products
+## 28. Show categories that have more than 3 products
 
 ```sql
 SELECT c.category_name, COUNT(p.product_id) AS product_count
@@ -152,7 +152,7 @@ HAVING COUNT(p.product_id) > 3;
 
 ---
 
-## 2️⃣9️⃣ Calculate total stock value (price × stock) per category
+## 29. Calculate total stock value (price × stock) per category
 
 ```sql
 SELECT c.category_name, 
@@ -165,7 +165,7 @@ ORDER BY total_stock_value DESC;
 
 ---
 
-## 3️⃣0️⃣ Find customers who have spent more than $500 total
+## 30. Find customers who have spent more than $500 total
 
 ```sql
 SELECT c.customer_id, c.first_name, c.last_name, SUM(o.total_amount) AS total_spent
